[tool.poetry]
name = "rebalancing-premium"
version = "0.1.0"
description = ""
authors = ["adbutler007 <adam.butler@investresolve.com>"]
readme = "README.md"
packages = [
    { include = "*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
pandas = "^2.2.3"
scipy = "^1.15.1"
joblib = "^1.4.2"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
